--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,147 @@
+
+html {
+  /*height: 100%;*/
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  /*height: 100vh;*/
+  /*width: 100vw;*/
+}
+
+
+button:focus {
+	outline:0;
+}
+
+.square {
+  height:70px;
+  width:70px;
+  display:inline-block;
+  border:0px solid #ddd;
+  float: left;
+  /*margin:0px 0 0 0px;*/
+  /*box-sizing: unset;*/
+  /*padding: unset;*/
+}
+
+.checker-w{
+	background-color: rgb(255,206,150);
+
+}
+
+.checker-g{
+	background-image: url("img/brownChecker.png");
+}
+
+.checker-O{
+	background-image: url("img/brownTargetChecker.png");
+	background-size: 70px 70px;
+	cursor:pointer;
+}
+
+.board-row {
+/*  clear: both;
+  content: "";
+  display: table;*/
+}
+
+
+.player-W{
+	  width:50px;
+      height:50px;
+      margin-left: 4px;
+      border-radius:40px;
+      border: none;
+      cursor:pointer;
+      position:relative;
+      background-image: url("img/white.png");
+      background-size: 55px 55px;
+}
+
+.player-WK{
+	  width:50px;
+      height:50px;
+      margin-left: 4px;
+      border-radius:40px;
+      border: none;
+      cursor:pointer;
+      position:relative;
+      background-image: url("img/whiteKing.jpeg");
+      background-size: 55px 55px;
+}
+
+.player-BK{
+	  width:50px;
+      height:50px;
+      margin-left: 4px;
+      border-radius:40px;
+      border: none;
+      cursor:pointer;
+      position:relative;
+      background-image: url("img/blackKing.jpeg");
+      background-size: 55px 55px;
+}
+
+.player-B{
+	  width:50px;
+      height:50px;
+      margin-left: 4px;
+      border-radius:40px;
+      border: none;
+      cursor:pointer;
+      position:relative;
+      background-image: url("img/black.png");
+      background-size: 55px 55px;
+}
+
+.player-H{
+	  width:50px;
+      height:50px;
+      margin-left: -2px;
+      border-radius:40px;
+      border: none;
+      cursor:pointer;
+      position:relative;
+      margin: auto;
+      background: linear-gradient(0deg, rgb(255,213,0) 30%, rgb(255,213,0) 70%);
+      -webkit-box-shadow: 0px 0px 30px rgba(255, 173, 51, 0.91);
+      -moz-box-shadow:    0px 0px 30px rgba(255, 173, 51, 0.91);
+      box-shadow:         0px 0px 30px rgba(255, 173, 51, 0.91);
+
+}
+
+.center {
+  overflow:auto;
+  margin: 0 auto;
+  width: 560px;
+  border: 20px solid black;
+}
+
+.btn1 {
+  background-color: rgb(112,56,0); 
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin:10px auto;
+  margin-left: 38%;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.btn1:hover {
+  background-color:  #e7e7e7;
+  color: rgb(112,56,0);
+}
+
+.status {
+	margin-left: 2%;
+	display: inline-block;
 }
